[package]
name = "hexy"
version = "0.1.3"
authors = ["geno nullfree <nullfree.geno@gmail.com>"]
edition = "2018"
description = "A rust library for printing hexy hex dumps with colors based on the byte values"
keywords = ["hex", "hexdump", "byte", "print", "color"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/genonullfree/hexy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
